--- a/templates/person.html
+++ b/templates/person.html
@@ -6,7 +6,7 @@
     <title>Ghost Selector</title>
     <style>
         body {
-            background: url("/assets/spooky-bg.gif") no-repeat center center fixed;
+            background: url("/static/spooky-bg.gif") no-repeat center center fixed;
    background-size: cover;
    color: white;
    font-family: Arial, sans-serif;
@@ -84,7 +84,7 @@
         <div class="arrow" onclick="prevGhost()">⟵</div>
 
         <div class="ghost-container">
-            <img id="ghost" src="/assets/littleghost.png" class="ghost-img" alt="Ghost Option">
+            <img id="ghost" src="/static/littleghost.png" class="ghost-img" alt="Ghost Option">
             <div id="ghostName">Brother</div>
         </div>
 
@@ -96,15 +96,15 @@
 
     <script>
         const ghosts = [
-            "/assets/littleghost.png",
-            "/assets/littleghost2.png",
-            "/assets/littleghost3.png",
-            "/assets/littleghost8.png",
-            "/assets/littleghost4.png",
-            "/assets/littleghost5.png",
-            "/assets/littleghost9.png",
-            "/assets/littleghost6.png",
-            "/assets/littleghost7.png"
+            "/static/littleghost.png",
+            "/static/littleghost2.png",
+            "/static/littleghost3.png",
+            "/static/littleghost8.png",
+            "/static/littleghost4.png",
+            "/static/littleghost5.png",
+            "/static/littleghost9.png",
+            "/static/littleghost6.png",
+            "/static/littleghost7.png"
         ];
 
         const ghostNames = [
