--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
         • Have fun and good luck!
     </p>
 
-    <a href="page2.html">
+    <a href="{{ url_for('page2') }}">
         <button>START</button>
     </a>
 
