--- a/templates/page2.html
+++ b/templates/page2.html
@@ -60,25 +60,15 @@
 </head>
 <body>
 
-<h1>Enter a txt file or type/paste notes</h1>
-
-<input 
-    type="text" 
-    class="input-box" 
-    placeholder="Enter Topic Here"
-    id="topic" 
->
-
-<form action="/game" method="POST" enctype="multipart/form-data">
+<form action="/person" method="POST" enctype="multipart/form-data">
     <input name="userfile" id="userfile" type="file">
 
     <textarea 
         class="notes-box" 
         placeholder="Type or paste your notes here..."
-        id="notes"
+        id="notes" 
         name="notes"
     ></textarea>
-
     <button type="button" id="downloadBtn">CONVERT TO TXT FILE</button>
     <button type="submit" id="nextBtn">NEXT</button>
 </form>
